--- a/Avalonia.ListBoxAnimation.Samples/Views/MainWindow.axaml
+++ b/Avalonia.ListBoxAnimation.Samples/Views/MainWindow.axaml
@@ -3,6 +3,7 @@
         xmlns:vm="using:Avalonia.ListBoxAnimation.Samples.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:views="clr-namespace:Avalonia.ListBoxAnimation.Samples.Views"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.ListBoxAnimation.Samples.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
@@ -10,8 +11,5 @@
     <Design.DataContext>
         <vm:MainWindowViewModel />
     </Design.DataContext>
-    <StackPanel>
-        <TabControl Items="{Binding Tabs}" Background="Transparent" />
-        <ListBox Items="{Binding Items}" />
-    </StackPanel>
+    <views:EnhancedListBox ItemsSource="{Binding Items}" />
 </Window>
